<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.settings.SettingsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/li_start_on_bluetooth"
        android:layout_marginTop="@dimen/settings_margin_top">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_start_play_on_bluetooth"
            android:id="@+id/switch_start_on_bt_connected"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/li_start_on_startup"
        android:layout_below="@+id/li_start_on_bluetooth"
        android:layout_marginTop="@dimen/settings_margin_top">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_start_on_startup"
            android:id="@+id/switch_start_after_boot"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/li_start_on_startup"
        android:id="@+id/li_play_last_station"
        android:layout_marginTop="@dimen/settings_margin_top">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_play_last_station"
            android:id="@+id/switch_play_last_station"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/li_playlist_url"
        android:layout_marginTop="@dimen/settings_margin_top"
        android:layout_below="@+id/li_play_last_station">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_playlist_url"
            android:id="@+id/textView"
            android:textSize="@dimen/text_size"
            android:labelFor="@+id/et_playlist_uri"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_playlist_uri"
            android:inputType="textUri"
            android:hint="http://"
            android:lines="1"/>
    </LinearLayout>

</RelativeLayout>
